# Breakout

./: CMakeLists.txt
Dependencies/freetype/lib/: libfreetype.la
Dependencies/freetype/objs/: bdf.lo  cff.lo  ftbase.lo  ftbbox.lo  ftbdf.lo  ftbitmap.lo  ftcid.lo  ftdebug.lo  ftfstype.lo  ftgasp.lo  ftglyph.lo  ftgxval.lo  ftinit.lo  ftmm.lo  ftotval.lo  ftpatent.lo  ftpfr.lo  ftstroke.lo  ftsynth.lo  ftsystem.lo  fttype1.lo  ftwinfnt.lo  pcf.lo  pfr.lo  truetype.lo  type1.lo  type1cid.lo  type42.lo  winfnt.lo
res/Shaders/: sprite.vert
src/: Game.cpp  Game.h  SpriteRenderer.cpp  SpriteRenderer.h  TextRenderer.cpp  main.cpp
